fixed post message overflow issue and set/enforced character limits for messages and image links

--- a/src/ui/src/app/post/post.component.css
+++ b/src/ui/src/app/post/post.component.css
@@ -14,6 +14,7 @@
   border-color: lightgray;
   margin: 10px 0px;
   background-color: azure;
+  overflow-wrap: break-word;
 }
 
 .commentContent {
